--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tez61",
+  "name": "tez-starter-vue-template",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.2",
-    "@tezjs/vue": "^0.0.62"
+    "@tezjs/vue": "^0.0.84"
   },
   "devDependencies": {
-    "@tezjs/cli": "^0.0.62",
-    "@tezjs/route": "^0.0.62",
+    "@tezjs/cli": "^0.0.90",
+    "@tezjs/route": "^0.0.84",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
